# proxmox-api

./: .gitignore  Cargo.toml  README.md
examples/testing-example/: Cargo.toml
examples/testing-example/src/: main.rs
src/: auth.rs  deserializers.rs  error.rs  lib.rs
src/model/: mod.rs
src/model/cluster/: mod.rs  resources.rs  sdn.rs  status.rs
src/model/cluster/notifications/: endpoints.rs  matchers.rs  mod.rs  targets.rs
src/model/node/: aplinfo.rs  config.rs  dns.rs  execute.rs  hosts.rs  mod.rs  netstat.rs  tasks.rs  time.rs  url_metadata.rs
src/model/node/lxc/: clone.rs  config.rs  interfaces.rs  mod.rs
src/model/node/vzdump/: defaults.rs  mod.rs
src/namespaces/: mod.rs
src/namespaces/cluster/: mod.rs
src/namespaces/nodes/: mod.rs  tasks.rs  vzdump.rs
src/namespaces/nodes/lxc/: mod.rs
src/namespaces/nodes/lxc/status/: mod.rs
