[package]
name = "proxmox-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tracing = "0.1.40"
