[package]
name = "testing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxmox-api = { path = "../../" }
tokio = { version = "1.35.0", features = ["full"] }
tracing-subscriber = "0.3.18"
